# pace-2020

./: CMakeLists.txt  LICENSE  README.md  example_input.gr  main.cpp
include/: Constants.h  Makros.h
include/CONTESTS/PACE20/: ComponentTreeMerger.h  DTKernelizer.h  DTKernelizerDeg3.h  DTKernelizerDeg4.h  DepthTree.h  DepthTreeIrrelevantNodeShifter.h  DepthTreePivotMaker.h  ImbalancedTreeImprover.h  Pace20.h  Pace20Params.h  Separator.h  SeparatorEvaluators.h  SeparatorStats.h  SubtreeRerunnerImprover.h  TotalPivotMaker.h
include/combinatorics/: CombinatoricUtils.h
include/datastructures/: FAU.h  Heap.h
include/frameworks/: BMS.h  DecisionProblem.h  ForbiddenStates.h  Solution.h  StochasticApproximation.h
include/graphs/: GraphInducer.h  GraphReader.h  GraphUtils.h
include/graphs/VertexCover/: BipartiteGraphVertexCover.h  SolutionVC.h  VCUtils.h
include/graphs/cliques/: CliqueExtension.h  CliqueUtils.h
include/graphs/components/: BridgesAndArtPoints.h  ConnectedComponents.h
include/graphs/flow/: DisjointPaths.h  MaxFlow.h  MaxFlowPushRelabel.h  MinCostFlowOneWayDirected.h  (+2 more)
include/numbertheory/: Binom.h  NumberTheoryUtils.h
include/utils/: RandomNumberGenerators.h  StandardUtils.h  TimeMeasurer.h
src/combinatorics/: CombinatoricUtils.cpp
src/datastructures/: FAU.cpp
src/frameworks/: BMS.cpp  ForbiddenStates.cpp  Solution.cpp  StochasticApproximation.cpp
src/graphs/: GraphInducer.cpp  GraphReader.cpp  GraphUtils.cpp
src/numbertheory/: Binom.cpp  NumberTheoryUtils.cpp
src/utils/: RandomNumberGenerators.cpp  StandardUtils.cpp  TimeMeasurer.cpp
(+104 files in other folders)
